--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.7</version>
+		  <version>2.1.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.softnunes</groupId>
@@ -59,11 +59,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.mapstruct</groupId>
-		    <artifactId>mapstruct</artifactId>
-		    <version>1.4.1.Final</version>
-		</dependency>
-		<dependency>
 		    <groupId>io.jsonwebtoken</groupId>
 		    <artifactId>jjwt</artifactId>
 		    <version>0.9.1</version>
@@ -89,6 +84,21 @@
 		    <artifactId>springfox-bean-validators</artifactId>
 		    <version>2.9.2</version>
 		</dependency>
+	    <dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.mapstruct</groupId>
+		    <artifactId>mapstruct</artifactId>
+		    <version>1.4.1.Final</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -98,43 +108,18 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				 <groupId>com.spotify</groupId>
-    			 <artifactId>dockerfile-maven-plugin</artifactId>
-    			 <version>1.4.13</version>
-				<executions>
-					<execution>
-                    <id>tag-latest</id>
-                    <goals>
-                        <goal>build</goal>
-                        <goal>tag</goal>
-                        <goal>push</goal>
-                    </goals>
-                    <configuration>
-                        <tag>latest</tag>
-                    </configuration>
-                </execution>
-                <execution>
-                    <id>tag-version</id>
-                    <goals>
-                        <goal>build</goal>
-                        <goal>tag</goal>
-                        <goal>push</goal>
-                    </goals>
-                    <configuration>
-                        <tag>${project.version}</tag>
-                    </configuration>
-                </execution>
-				</executions>
-					<configuration>
-					<useMavenSettingsForAuth>true</useMavenSettingsForAuth>
-			       		 <repository>registry.hub.docker.com/[username]/${project.artifactId}</repository>
-				          <tag>${project.version}</tag>
-				        <buildArgs>
-				            <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
-				        </buildArgs>
-		    	    </configuration>
-			</plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <configuration>
+		            <annotationProcessorPaths>
+		                <path>
+		                    <groupId>org.mapstruct</groupId>
+		                    <artifactId>mapstruct-processor</artifactId>
+		                    <version>1.3.1.Final</version>
+		                </path>
+		            </annotationProcessorPaths>
+		        </configuration>
+		    </plugin>
 		</plugins>
 	</build>
-
 </project>
