--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.url=${FLYWAY_URL}
-spring.jpa.show-sql=false
+
+spring.datasource.url=jdbc:mysql://softnunes-mysql:3306/db_softnunes?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+
+management.endpoints.web.exposure.include=info,health,flyway
